--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q1.1</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>q1.1</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "q1.1 results: All test cases passed!"
@@ -563,7 +563,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.1</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q2.1</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q2.1 results: All test cases passed!"
@@ -644,7 +644,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q2.2</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q2.2 results: All test cases passed!"
@@ -722,7 +722,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.3</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>q2.3</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q2.3 results: All test cases passed!"
@@ -1216,7 +1216,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q2.4</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q2.4 results: All test cases passed!"
@@ -1294,11 +1294,13 @@
    "source": [
     "from sklearn.tree import plot_tree\n",
     "\n",
+    "feature_names = [\"supportive_colleagues\", \"work_hour_flexibility\", \"start_up\"]\n",
+    "class_names = [\"happy\", \"unhappy\"]\n",
+    "\n",
     "toy_tree_viz = plot_tree(toy_tree,\n",
-    "feature_names = [ \"supportive_colleagues\", \"work_hour_flexibility\", \"start_up\"], # feature names \n",
-    "class_names = [\"happy\", \"unhappy\"] # unique class names \n",
-    "                        )\n",
-    "\n"
+    "                         class_names = class_names, \n",
+    "                         feature_names = feature_names\n",
+    "                        )"
    ]
   },
   {
@@ -1312,81 +1314,10 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>q2.5</pre> results:</strong></p><p><strong><pre style='display: inline;'>q2.5 - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        assert not toy_tree_viz is None, 'Are you using the provided variable?'\n",
-       "    Expecting nothing\n",
-       "    ok\n",
-       "    Trying:\n",
-       "        assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "    Expecting nothing\n",
-       "    **********************************************************************\n",
-       "    Line 2, in q2.5 0\n",
-       "    Failed example:\n",
-       "        assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"C:\\Users\\anees\\miniconda3\\envs\\cpsc330\\Lib\\doctest.py\", line 1357, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q2.5 0[1]>\", line 1, in <module>\n",
-       "            assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "                                ^^^^^^^^^^^^^\n",
-       "        NameError: name 'feature_names' is not defined\n",
-       "    Trying:\n",
-       "        assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "    Expecting nothing\n",
-       "    **********************************************************************\n",
-       "    Line 3, in q2.5 0\n",
-       "    Failed example:\n",
-       "        assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"C:\\Users\\anees\\miniconda3\\envs\\cpsc330\\Lib\\doctest.py\", line 1357, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q2.5 0[2]>\", line 1, in <module>\n",
-       "            assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "                                        ^^^^^^^^^^^\n",
-       "        NameError: name 'class_names' is not defined\n",
-       "</pre>"
+       "<p><strong><pre style='display: inline;'>q2.5</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
-       "q2.5 results:\n",
-       "    q2.5 - 1 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            assert not toy_tree_viz is None, 'Are you using the provided variable?'\n",
-       "        Expecting nothing\n",
-       "        ok\n",
-       "        Trying:\n",
-       "            assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "        Expecting nothing\n",
-       "        **********************************************************************\n",
-       "        Line 2, in q2.5 0\n",
-       "        Failed example:\n",
-       "            assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"C:\\Users\\anees\\miniconda3\\envs\\cpsc330\\Lib\\doctest.py\", line 1357, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q2.5 0[1]>\", line 1, in <module>\n",
-       "                assert sha1(str(len(feature_names)).encode('utf-8')).hexdigest() == '77de68daecd823babbb58edb1c8e14d7106e83bb', 'Are you passing the correct list of features?'\n",
-       "                                    ^^^^^^^^^^^^^\n",
-       "            NameError: name 'feature_names' is not defined\n",
-       "        Trying:\n",
-       "            assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "        Expecting nothing\n",
-       "        **********************************************************************\n",
-       "        Line 3, in q2.5 0\n",
-       "        Failed example:\n",
-       "            assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"C:\\Users\\anees\\miniconda3\\envs\\cpsc330\\Lib\\doctest.py\", line 1357, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q2.5 0[2]>\", line 1, in <module>\n",
-       "                assert sha1(str(sorted(list(class_names))).encode('utf-8')).hexdigest() == '4621a7584156c08258ad22a7adc86667984d9382', 'Are you passing the correct list of classes?'\n",
-       "                                            ^^^^^^^^^^^\n",
-       "            NameError: name 'class_names' is not defined"
+       "q2.5 results: All test cases passed!"
       ]
      },
      "execution_count": 16,
@@ -1459,7 +1390,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q2.6</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q2.6 results: All test cases passed!"
@@ -1548,7 +1479,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.7</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q2.7</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "q2.7 results: All test cases passed!"
@@ -1785,7 +1716,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2.9</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q2.9</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q2.9 results: All test cases passed!"
@@ -1922,7 +1853,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.1</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q3.1</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q3.1 results: All test cases passed!"
@@ -2010,7 +1941,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.2</pre></strong> passed! 🎉</p>"
+       "<p><strong><pre style='display: inline;'>q3.2</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "q3.2 results: All test cases passed!"
@@ -2410,7 +2341,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3.4</pre></strong> passed! 🎉</p>"
+       "<p><strong><pre style='display: inline;'>q3.4</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q3.4 results: All test cases passed!"
@@ -2959,7 +2890,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4.1</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q4.1</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q4.1 results: All test cases passed!"
@@ -3083,7 +3014,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4.2</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q4.2</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q4.2 results: All test cases passed!"
@@ -3292,71 +3223,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.041093</td>\n",
-       "      <td>0.012991</td>\n",
+       "      <td>0.029762</td>\n",
+       "      <td>0.007788</td>\n",
        "      <td>0.722222</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.062018</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.041642</td>\n",
+       "      <td>0.000540</td>\n",
        "      <td>0.660494</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.055782</td>\n",
-       "      <td>0.005841</td>\n",
+       "      <td>0.031644</td>\n",
+       "      <td>0.015646</td>\n",
        "      <td>0.660494</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.098616</td>\n",
-       "      <td>0.003391</td>\n",
+       "      <td>0.037285</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.677019</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.044009</td>\n",
-       "      <td>0.015606</td>\n",
+       "      <td>0.032060</td>\n",
+       "      <td>0.006808</td>\n",
        "      <td>0.695652</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.046874</td>\n",
+       "      <td>0.032650</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.652174</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.046862</td>\n",
+       "      <td>0.026346</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.658385</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.058260</td>\n",
-       "      <td>0.006652</td>\n",
+       "      <td>0.030851</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.608696</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.048383</td>\n",
+       "      <td>0.034942</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.683230</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.049307</td>\n",
-       "      <td>0.000295</td>\n",
+       "      <td>0.030467</td>\n",
+       "      <td>0.014024</td>\n",
        "      <td>0.695652</td>\n",
        "      <td>0.999311</td>\n",
        "    </tr>\n",
@@ -3366,16 +3297,16 @@
       ],
       "text/plain": [
        "   fit_time  score_time  test_score  train_score\n",
-       "0  0.041093    0.012991    0.722222     0.999311\n",
-       "1  0.062018    0.000000    0.660494     1.000000\n",
-       "2  0.055782    0.005841    0.660494     0.999311\n",
-       "3  0.098616    0.003391    0.677019     1.000000\n",
-       "4  0.044009    0.015606    0.695652     0.999311\n",
-       "5  0.046874    0.000000    0.652174     0.999311\n",
-       "6  0.046862    0.000000    0.658385     0.999311\n",
-       "7  0.058260    0.006652    0.608696     0.999311\n",
-       "8  0.048383    0.000000    0.683230     0.999311\n",
-       "9  0.049307    0.000295    0.695652     0.999311"
+       "0  0.029762    0.007788    0.722222     0.999311\n",
+       "1  0.041642    0.000540    0.660494     1.000000\n",
+       "2  0.031644    0.015646    0.660494     0.999311\n",
+       "3  0.037285    0.000000    0.677019     1.000000\n",
+       "4  0.032060    0.006808    0.695652     0.999311\n",
+       "5  0.032650    0.000000    0.652174     0.999311\n",
+       "6  0.026346    0.000000    0.658385     0.999311\n",
+       "7  0.030851    0.000000    0.608696     0.999311\n",
+       "8  0.034942    0.000000    0.683230     0.999311\n",
+       "9  0.030467    0.014024    0.695652     0.999311"
       ]
      },
      "execution_count": 42,
@@ -3753,7 +3684,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q5.1</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q5.1</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "q5.1 results: All test cases passed!"
@@ -3982,7 +3913,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q5.4</pre></strong> passed! ✨</p>"
+       "<p><strong><pre style='display: inline;'>q5.4</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q5.4 results: All test cases passed!"
@@ -4058,18 +3989,18 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'DecisionTreeRegressor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[52], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m best_model \u001b[38;5;241m=\u001b[39m \u001b[43mDecisionTreeRegressor\u001b[49m(random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123\u001b[39m)\n\u001b[0;32m      2\u001b[0m best_model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      3\u001b[0m test_score \u001b[38;5;241m=\u001b[39m best_model\u001b[38;5;241m.\u001b[39mscore(X_train, y_train)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'DecisionTreeRegressor' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.9987597764675851"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.tree import DecisionTreeRegressor \n",
     "best_model = DecisionTreeRegressor(random_state=123)\n",
     "best_model.fit(X_train, y_train)\n",
     "test_score = best_model.score(X_train, y_train)\n",
